# movelite

./: .gitignore  .release-please-manifest.json  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.sh  release-please-config.json
.github/workflows/: build-binaries.yml  ci.yml  publish.yml  release-please.yml  release.yml
npm/movelite/: CHANGELOG.md  README.md  package.json
npm/mvlite/: package.json
patches/: README.md
patches/aptos-core/: 0001-movelite-trace-hooks.patch  0002-session-commit-write-set.patch
scripts/: build-npm-package.sh  publish-local.sh  publish-npm.sh
src/: main.rs  server.rs  session_wrapper.rs  trace.rs
test/: capture-samples.ts  counter-trace.ts  integration.ts  package-lock.json  package.json  trace-smoke.ts  verify-commit.ts
test/counter/: Move.toml
test/counter/sources/: counter.move
test/samples/: abort.json  counter-increment.json  transfer.json
