[package]
name = "movelite"
version = "0.2.0" # x-release-please-version
edition = "2021"
description = "Lightweight Move VM for local development — anvil-like experience for Movement L1"
license = "Apache-2.0"

[features]
# Enables the `record_move_return` / `record_event` tracer hooks that depend on
# the move-vm fork patches (patches/aptos-core). Off by default so movelite
# compiles against a vanilla aptos-core checkout.
trace_patches = []

[dependencies]
aptos-transaction-simulation-session = { path = "../.aptos-core/aptos-move/aptos-transaction-simulation-session" }
aptos-transaction-simulation = { workspace = true }
aptos-types = { workspace = true }
aptos-crypto = { workspace = true }
aptos-api-types = { workspace = true }
move-core-types = { workspace = true }
# Tracing (POST /transactions/trace) dependencies.
aptos-gas-algebra = { workspace = true }
aptos-gas-meter = { workspace = true }
aptos-vm = { workspace = true }
aptos-vm-types = { workspace = true }
aptos-vm-environment = { workspace = true }
aptos-vm-logging = { workspace = true }
aptos-resource-viewer = { workspace = true }
move-binary-format = { workspace = true }
move-vm-types = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
# Non-poisoning lock for the VM session (a panic must not brick the server).
parking_lot = { workspace = true }
# Not a workspace dep in aptos-core; 0.4.13 is already in Cargo.lock via axum,
# so pinning it adds no lock churn (same precedent as `urlencoding`).
tower = { version = "0.4.13", features = ["timeout", "limit", "util"] }
clap = { workspace = true, features = ["derive"] }
url = { workspace = true }
urlencoding = "2"
bcs = { workspace = true }
hex = { workspace = true }
